# rest-showcase-haskell

./: .gitignore  README.md  build.sh  rest-showcase-haskell.cabal  run  run.sh
src/: Experiment.hs  Main.hs  Scotty.hs  Showcase.hs
test/: ExampleSpec.hs  ShowcaseSpec.hs
