name:              rest-showcase-haskell
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable haskell-exp
  main-is:         Showcase.hs
  hs-source-dirs:  src
  build-depends:   base,
                   scotty,
                   http-types,
                   text
