name:              rest-showcase-haskell
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable rest-showcase-haskell
  main-is:         Showcase.hs
  other-extensions:OverloadedStrings, DeriveGeneric
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   scotty,
                   http-types,
                   text,
                   aeson,
                   bytestring,
                   pureMD5

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  build-depends:   base,
                   hspec
